chore: remove local vector store from repo and ignore generated data

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,10 @@ __pycache__/
 # =========================
 backend/data/
 backend/data/**
+backend/data/uploads/
+backend/data/uploads/**
+backend/data/processed/
+backend/data/processed/**
 data/
 data/**
 
